forgot to finish the xmlns

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest
-    xmlns:android="hublaaa"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="id.kplay.game.engine"
 
     <application
